feat: create raw component displaying owner ID instead of Owner Record

--- a/force-app/main/default/lwc/serviceCaseQueueFiltered/serviceCaseQueueFiltered.html
+++ b/force-app/main/default/lwc/serviceCaseQueueFiltered/serviceCaseQueueFiltered.html
@@ -1,3 +1,12 @@
 <template>
-    
-</template>
+    <lightning-card>
+        <template if:true={cases.data}>
+            <lightning-datatable
+                key-field="Id"
+                data={cases.data}
+                columns={columns}
+            >
+           </lightning-datatable>
+        </template>
+    </lightning-card>
+</template> 
