feat: update SOQL query so it returns Cases of current user

--- a/force-app/main/default/lwc/serviceCaseQueueFiltered/serviceCaseQueueFiltered.html
+++ b/force-app/main/default/lwc/serviceCaseQueueFiltered/serviceCaseQueueFiltered.html
@@ -28,6 +28,9 @@
                         <td>
                             <div class="slds-truncate">{caseItem.Origin}</div>
                         </td>
+                        <td>
+                            <div class="slds-truncate">{caseItem.CreatedDate}</div>
+                        </td>
                     </tr>
                 </template>
             </template>
